Favicon añadido Añadidos los productos (a falta de reemplazar por los finales) Añadido formulario de contacto funcional Añadido enlace a FB

--- a/_data/comics/data.yml
+++ b/_data/comics/data.yml
@@ -1,6 +1,6 @@
-comic1_title: OJOS DE FUEGO
-comic1_description: "Desafiando a los dioses y al destino, Agn est dispuesta a lo que sea para hacerse con la HOLOESFERA y as romper el hechizo que la une al terrible demonio Luciphiros."
-comic2_title:
-comic2_description:
-comic3_title:
-comic3_description:
+﻿comic1_title: OJOS DE FUEGO
+comic1_description: Desafiando a los dioses y al destino, Agní está dispuesta a lo que sea para hacerse con la HOLOESFERA y así romper el hechizo que la une al terrible demonio Luciphiros.
+comic2_title: EL COLOR DE LA MAGIA
+comic2_description: Valf, la pirata de los aires más buscada, quiere la HOLOESFERA tanto como Agní. ¿Esto las convierte en rivales, o en aliadas?
+comic3_title: DRAGONES Y MAZMORRAS
+comic3_description: Para hacerse con la HOLOESFERA, Agní y sus amigos deben escapar de unas mazmorras… ¡donde hay dragones por todas partes!
